<?xml version="1.0"?>
<package format="3">
    <name>plotjuggler_sample_plugins</name>
    <version>0.1.0</version>
    <description>PlotJuggler sample plugins</description>

    <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
    <license>LGPLv3</license>

    <url type="website">https://github.com/PlotJuggler/plotjuggler-sample-plugins</url>

    <author email="davide.faconti@gmail.com">Davide Faconti</author>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend>plotjuggler</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
