<?xml version="1.0"?>
<package format="3">
    <name>plotjuggler_apbin_plugins</name>
    <version>0.1.0</version>
    <description>PlotJuggler ArduPilot Bin plugins</description>

    <maintainer email="pierre.kancir.emn@gmail.com">Pierre KANCIR</maintainer>
    <license>LGPLv3</license>

    <url type="website">https://github.com/PlotJuggler/plotjuggler-apbin-plugins</url>

    <author email="pierre.kancir.emn@gmail.com">Pierre KANCIR</author>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend>plotjuggler</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
